# VLDB-Toolkits

./: .gitignore  README.md  build.sh
.github/workflows/: build-release.yml  main.yml  test-build.yml
app/: .env.local  DEV_SETUP.md  FLUENT_UI_GUIDE.md  README.md  THEME_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  check-linux-deps.sh  entitlements.plist  installer.nsi  tauri.conf.json  tech.silan.VLDB-Toolkits.desktop  tech.silan.VLDB-Toolkits.metainfo.xml  tech.silan.VLDB-Toolkits.yml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: .gitkeep  icon.icns
app/src/algorithms/: data-processor.ts  excel-exporter.ts  excel-parser.ts  index.ts
app/src/components/: app-sidebar.tsx  breadcrumb.tsx  page-header.tsx  theme-toggle.tsx
app/src/lib/: accent-color.tsx  api.ts  fluent-theme.ts  i18n.tsx  paper-utils.ts  theme-context.tsx
app/src/pages/: AuthorsPage.tsx  DataImportPage.tsx  PaperDetailPage.tsx  PapersPage.tsx
app/src/store/: README.md  brand-store.ts  index.ts  paper-store.ts  paper-types.ts  types.ts
app/src/styles/: globals.css
release/: BUILD_AND_RELEASE.md
release/node.js-npm/: DEPLOYMENT.md  README.md  package.json  test_local.sh
release/node.js-npm/lib/: cli.js  config.js  downloader.js
release/node.js-npm/test/: test.js
release/python-pip/: DEPLOYMENT.md  pyproject.toml  test_local.sh
release/python-pip/vldb_toolkits/: cli.py  (+3 more)
test/: create_sample_data.py  parse_excel.cjs  parsed_data.json  test_import_logic.cjs  test_output.xlsx  test_system.py
(+4 files in other folders)
