[package]
name = "vldb_toolkits"
version = "0.1.0"
description = "VLDB-Toolkits - Paper Management Platform"
authors = ["EASYNET Inc."]
license = ""
repository = ""
edition = "2021"

[lib]
name = "vldb_toolkits_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
